--- a/dashboard.html
+++ b/dashboard.html
@@ -787,7 +787,7 @@
                     <tr>
                         <th>Time</th>
                         <th>Domain</th>
-                        <th>Trust Score</th>
+                        <th>Community Score</th>
                         <th>Threat Level (0-100)</th>
                         <th>Status</th>
                     </tr>
