--- a/admin.html
+++ b/admin.html
@@ -562,23 +562,12 @@
                 <div class="card">
                     <div class="card-header">
                         <div>
-                            <div class="card-title">Active Sessions</div>
-                            <div class="card-value">1</div>
-                        </div>
-                        <div class="card-icon bg-green">📡</div>
-                    </div>
-                    <div class="card-trend"><span class="trend-down">●</span> Currently Online</div>
-                </div>
-
-                <div class="card">
-                    <div class="card-header">
-                        <div>
-                            <div class="card-title">System Health</div>
-                            <div class="card-value">98%</div>
+                            <div class="card-title">System Sync</div>
+                            <div class="card-value" id="stats-sync-value">Checking...</div>
                         </div>
                         <div class="card-icon bg-yellow">⚡</div>
                     </div>
-                    <div class="card-trend">Server Status: <strong>Stable</strong></div>
+                    <div class="card-trend" id="stats-sync-status">Wait for status...</div>
                 </div>
             </div>
 
