--- a/dashboard.html
+++ b/dashboard.html
@@ -638,6 +638,7 @@
                 <li><a class="nav-item active" data-tab="tab-overview">📊 Overview</a></li>
                 <li><a class="nav-item" data-tab="tab-leaderboard">🏆 Leaderboard</a></li>
                 <li><a class="nav-item" data-tab="tab-logs">🛡️ Activity Log</a></li>
+                <li><a class="nav-item" data-tab="tab-reports">📢 My Reports</a></li>
                 <li><a class="nav-item" data-tab="tab-extensions">🧩 Extensions</a></li>
             </ul>
         </nav>
@@ -799,6 +800,37 @@
                 <div id="leaderboard-list" style="padding: 20px;">Loading...</div>
             </div>
         </div>
+
+        <!-- TAB: MY REPORTS -->
+        <div id="tab-reports" class="tab-content">
+            <h2 class="section-title">📢 My Reported Sites</h2>
+            <div class="stat-card" style="padding: 0; overflow: hidden;">
+                <div class="table-container" style="padding: 2px;">
+                    <table class="log-table">
+                        <thead>
+                            <tr>
+                                <th>Date</th>
+                                <th>Website</th>
+                                <th>Status</th>
+                                <th>Admin Feedback / AI Analysis</th>
+                            </tr>
+                        </thead>
+                        <tbody id="user-reports-body">
+                            <tr>
+                                <td colspan="4" style="text-align: center; padding: 20px; color: #64748b;">
+                                    Loading your reports...
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div style="margin-top: 15px; text-align: right;">
+                <button id="refresh-my-reports" class="btn-modal btn-secondary"
+                    style="width: auto; padding: 8px 16px; font-size: 12px;">🔄 Refresh Status</button>
+            </div>
+        </div>
+
 
         <!-- TAB: LOGS -->
         <div id="tab-logs" class="tab-content">
