--- a/admin.html
+++ b/admin.html
@@ -9,6 +9,7 @@
         :root {
             /* Professional Color Palette (Slate & Blue) */
             --primary: #2563eb;
+            --primary-dark: #1d4ed8;
             --primary-bg: rgba(37, 99, 235, 0.1);
             --secondary: #64748b;
             --success: #10b981;
