THREAT LOG MOVED TO USER

--- a/admin.html
+++ b/admin.html
@@ -511,7 +511,7 @@
                 <li><a href="#" class="nav-link" data-tab="reports">🚩 Reports <span class="badge badge-active"
                             style="margin-left:auto; font-size:10px;">NEW</span></a></li>
                 <li><a href="#" class="nav-link" data-tab="trust">🤝 Community Trust</a></li>
-                <li><a href="#" class="nav-link" data-tab="logs">🛡️ Threat Logs</a></li>
+                <!-- Logs Removed -->
                 <li><a href="#" class="nav-link" data-tab="settings">⚙️ System Settings</a></li>
             </ul>
         </nav>
@@ -710,33 +710,7 @@
             </div>
         </div>
 
-        <!-- LOGS TAB -->
-        <div id="logs" class="tab-content">
-            <div class="table-container">
-                <div class="section-header">
-                    <h3>Global Threat Activity Log</h3>
-                    <button class="btn btn-outline" id="btn-delete-logs"
-                        style="color: #dc3545; border-color: #dc3545;">🗑️ Delete All Logs</button>
-                </div>
-                <p style="color: #6c757d; margin-bottom: 20px;">Real-time feed of blocked phishing attempts across the
-                    network.</p>
-                <table id="logs-table">
-                    <thead>
-                        <tr>
-                            <th>Timestamp</th>
-                            <th>User Source</th>
-                            <th>Target Domain</th>
-                            <th>Threat Type</th>
-                            <th>Risk Score</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- JS populated -->
-                    </tbody>
-                </table>
-            </div>
-        </div>
+        <!-- LOGS TAB (REMOVED) -->
 
         <!-- SETTINGS TAB -->
         <div id="settings" class="tab-content">
