--- a/banned.html
+++ b/banned.html
@@ -219,7 +219,7 @@
             <p>This site has been reported by PhishingShield users and banned by administrators due to malicious or
                 fraudulent activity.</p>
             <p style="margin-top: 10px; font-weight: bold; color: #dc3545;">
-                ⚠️ Penalty: You have lost 500 XP for attempting to visit this banned website.
+                ⚠️ Warning: 500 XP will be deducted if you click "Proceed Anyway".
             </p>
         </div>
 
