Save state and sync PJ123

--- a/admin.html
+++ b/admin.html
@@ -698,12 +698,13 @@
                             <th>Community Score</th>
                             <th>Safe Votes</th>
                             <th>Unsafe Votes</th>
-                            <th>Status Details</th>
+                            <th>Status</th>
+                            <th>Voters</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td colspan="5" style="text-align:center;">Loading trust data...</td>
+                            <td colspan="6" style="text-align:center;">Loading trust data...</td>
                         </tr>
                     </tbody>
                 </table>
