Fix anonymous reports and AI branding

--- a/admin.html
+++ b/admin.html
@@ -907,7 +907,7 @@
                                     padding: 2px 8px;
                                     border-radius: 4px;
                                     border: 1px solid rgba(59, 130, 246, 0.3);
-                                " class="ai-provider-label">POWERED BY GROQ</span>
+                                " class="ai-provider-label">POWERED BY PHISHINGSHIELD</span>
                             </h5>
 
                             <!-- Loading State -->
