--- a/dashboard.html
+++ b/dashboard.html
@@ -553,6 +553,33 @@
             overflow: visible !important;
         }
 
+        .risk-badge {
+            padding: 4px 8px;
+            border-radius: 6px;
+            font-size: 11px;
+            font-weight: 700;
+            text-transform: uppercase;
+            display: inline-block;
+        }
+
+        .risk-low {
+            background: #dcfce7;
+            color: #166534;
+            border: 1px solid #bbf7d0;
+        }
+
+        .risk-med {
+            background: #fef3c7;
+            color: #d97706;
+            border: 1px solid #fde68a;
+        }
+
+        .risk-high {
+            background: #fee2e2;
+            color: #dc2626;
+            border: 1px solid #fecaca;
+        }
+
         @media print {
             body.printing-mode>*:not(#print-report-container) {
                 display: none !important;
