--- a/admin.html
+++ b/admin.html
@@ -632,7 +632,7 @@
                 <div class="section-header">
                     <h3>CrowdShield - Reported Phishing Sites</h3>
                     <div style="display:flex; gap:10px; align-items:center;">
-                        <input type="text" id="reports-search" placeholder="Search reports..." 
+                        <input type="text" id="reports-search" placeholder="Search reports..."
                             style="padding:8px 12px; border:1px solid #e2e8f0; border-radius:8px; font-size:13px; width:200px;">
                         <button class="btn btn-outline" id="btn-refresh-reports">Refresh List</button>
                         <button class="btn btn-outline" id="btn-delete-all-reports"
@@ -676,11 +676,8 @@
                 <div class="section-header">
                     <h3>Community Trust Manager</h3>
                     <div style="display:flex; gap:10px; align-items:center;">
-                        <input type="text" id="trust-search" placeholder="Search domains..." 
+                        <input type="text" id="trust-search" placeholder="Search domains..."
                             style="padding:8px 12px; border:1px solid #e2e8f0; border-radius:8px; font-size:13px; width:200px;">
-                        <button class="btn btn-outline" id="btn-sync-trust" title="Push local data to Global Server">
-                            ☁️ Sync to Global
-                        </button>
                         <button class="btn btn-outline" id="btn-refresh-trust">Refresh List</button>
                         <button class="btn btn-outline" id="btn-clear-trust"
                             style="color:#dc3545; border-color:#dc3545;">🗑️ Clear History</button>
@@ -689,12 +686,9 @@
                 <div style="margin-bottom:20px; display:flex; justify-content:space-between; align-items:center;">
                     <p style="color:#6c757d; margin:0;">
                         Aggregated reputation scores from user votes. <br>
-                        <span style="font-size:12px;">Local Server Mode: Votes are saved locally until synced.</span>
+                        <span style="font-size:12px;">Local Server Mode: Votes are automatically synced in the
+                            background.</span>
                     </p>
-                    <div style="font-size:12px; color:#6c757d; text-align:right;">
-                        Global Sync Status: <span id="trust-sync-status" class="badge badge-user">Checking...</span>
-                        <div id="trust-last-sync" style="font-size:11px; margin-top:4px;">Last: Never</div>
-                    </div>
                 </div>
 
                 <table id="trust-table">
