PhishingShield 2.0 Update: AI Integrations, Enhanced HUD, and Detailed Documentation

--- a/dashboard.html
+++ b/dashboard.html
@@ -727,6 +727,23 @@
                     <div class="stat-value" id="user-rank-display" style="font-size: 20px; color: var(--primary);">
                         Novice</div>
                     <span style="font-size: 12px; color: var(--secondary);">Level <span id="user-level">1</span></span>
+
+                    <!-- New Privileges Section -->
+                    <div
+                        style="margin-top: 15px; width: 100%; text-align: left; border-top: 1px solid #e2e8f0; padding-top: 10px;">
+                        <div
+                            style="font-size: 10px; font-weight: 700; color: var(--secondary); margin-bottom: 8px; text-transform:uppercase;">
+                            Clearance Level</div>
+
+                        <div id="feat-qr"
+                            style="font-size: 11px; margin-bottom: 4px; color: #94a3b8; display:flex; align-items:center; gap:6px;">
+                            <span>🔒</span> QR Scanner <span style="font-size:9px; opacity:0.7;">(Lvl 5)</span>
+                        </div>
+                        <div id="feat-cham"
+                            style="font-size: 11px; color: #94a3b8; display:flex; align-items:center; gap:6px;">
+                            <span>🔒</span> Chameleon <span style="font-size:9px; opacity:0.7;">(Lvl 20)</span>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- XP Card -->
